# Chat-bot

./: .dockerignore  .gitignore  .gitignore copy  README.md  alembic.ini  compose.yml  dockerfile  pyproject.toml  req.txt  response.py  taskdef-celery.json  taskdef.json
.github/workflows/: deploy.yml
app/: celery_app.py  dockerfile  main.py  redis_client.py
app/REG/: Schema.py  embedding_model.py
app/REG/query/: query_db.py  utility.py
app/REG/store/: doc_process.py  (+3 more)
app/auth/: auth_schema.py  template_context.py  utility.py
app/chroma_db/: chroma.sqlite3
app/core/: checkpointer.py  config.py  redistest.py
app/graph/: builder.py  chatstate.py  model.py  routes.py  utils.py
app/models/: __init__.py  chat.py  connection.py  document.py  messages.py  user.py
app/security/: quadrails.py
app/services/: get_context.py
app/static/: manager.js  scripts.js
app/tasks/: __init__.py  ingest_document-v0.py  ingest_document.py  messages_store.py
app/templates/: base.html  chat.html  langraph.html  login.html  register.html  sidebar.html
app/tools/: __init__.py
chroma_db/: chroma.sqlite3
migrations/: env.py
migrations/versions/: 1942607ebc2f_add_updated_at_feild.py  37b2c78410c9_added_table.py  59b4a208876d_update_models.py  873a7776aa14_created_chatsession_and_messages_table.py  a462fef5c2a1_add_document_table_and_update_department.py  e03383a85a84_update_models.py
uploads/: 0e4208a9-4e3f-4f9b-8236-49d09c459a97_chunks.txt  2f305e52-4627-4234-b42e-24b968c605fd_Generative AI Foundations.docx  cc42d659-c3f5-42fd-8030-33a51d9542ca_Week 1_Roadmap.md
(+27 files in other folders)
